--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Joe & Genevieve are getting hitched!</title>
-    <meta name="description" content="We would like to invite you to our big day.">
+    <title>Joe & Genevieve are getting married!</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Joe & Genevieve are getting hitched"> <meta property="og:description" content="We would like to invite you to our big day.">
+    <meta property="og:title" content="Joe & Genevieve are getting married!"> <meta property="og:description" content="We would like to invite you to our big day.">
     <meta property="og:image" content="https://joeandgen.com/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
