--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ffffff">
-    <meta property="og:title" content="Joe & Genevieve are getting married!"> <meta property="og:description" content="We would like to invite you to our big day.">
+    <meta property="og:title" content="Joe & Genevieve are getting married!"> <meta property="og:description" content="Save the date!">
     <meta property="og:image" content="https://joeandgen.com/img/hero-min.jpg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
