--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <p><strong>June 10th</strong></p>
 
                     <h5>Wedding</h5>
-                    <p>On the 7th anniversary of our first date, will be getting married in a private ceremony 
+                    <p>On the 7th anniversary of our first date, we will be getting married in a private ceremony 
                         surrounded by immediate family.</p>
                 </div>
             </div>
@@ -139,8 +139,9 @@
                     <p><strong>June 14th</strong></p>
 
                     <h5>Reception <span class="time">4:30PM - 9:30PM</span></h5>
-                    <p>Dinner, drinks, and fun at one of Joe and Genevieve's favorite local breweries
-                        that has been rented out for the evening.
+                    <p>
+                        Join us for an evening of food, fun, and LOTS of beer at one of our favorite local 
+                        breweries—reserved exclusively for our reception. Come thirsty!
                     </p>
                 </div>
             </div>
@@ -170,6 +171,8 @@
                         <strong>High Casual</strong>
                         <br>
                         Nice casual/comfortable clothing.
+                        <br>
+                        A suit is too much, but jorts are too little. Somewhere in between?
                     </p>
                 </div>
             </div><!-- /.modal-content -->
@@ -276,7 +279,6 @@
 <section id="map" class="section-padding">
     <div class="text-center">
         <h3>How do I get there?</h3>
-        <p>It's way easier than you think!</p>
     </div>
     <div id="map-canvas"></div>
     <div id="map-content-wrapper" class="container pointer-events-none">
@@ -296,7 +298,6 @@
                         <div class="col-md-6">
                             <h5>Joe Busse</h5>
                             <p><i class="fa fa-mobile"></i> <a href="tel://+13177099925">+1 (317)709-9925</a><br>
-                                <i class="fa fa-mobile"></i> <a href="tel://+13177099925">+1 (317)709-9925</a></p>
                         </div>
                     </div>
                     <div class="row text-center">
@@ -338,7 +339,8 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before May 14th</p>
+                <p>We would greatly appreciate if you could RSVP before May 1st.</p>
+                <p>Please select 0 for your party size if you cannot make it.</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -363,7 +365,7 @@
                             <div class="form-input-group">
                                 <i class="fa fa-users"></i><input type="number" name="extras" class="" min="0"
                                                                   max="10"
-                                                                  placeholder="Husband/Wife or kids"
+                                                                  placeholder="Total Party Size"
                                                                   required>
                             </div>
                         </div>
@@ -380,8 +382,7 @@
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
                     <button class="btn-fill rsvp-btn">
-                        Yes,
-                        that's me!
+                        Submit RSVP
                     </button>
                 </form>
             </div>
@@ -393,7 +394,8 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Registry</h3>
-                <a href="https://www.amazon.com/wedding/share/joeandgen" class="btn btn-fill btn-large btn-margin-right">Amazon</a>
+                <!-- <a href="https://www.amazon.com/wedding/share/joeandgen" class="btn btn-fill btn-large btn-margin-right">Amazon</a> -->
+                <a  class="btn btn-fill btn-large btn-margin-right">Coming Soon</a>
             </div>
         </div>
     </div>
