--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         </div>
                         <div class="col-md-6">
                             <h5>Joe Busse</h5>
-                            <p><i class="fa fa-mobile"></i> <a href="tel://+13177099925">+1 (317)709-9925</a><br>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://+13177099925">+1 (317)709-9925</a><br></p>
                         </div>
                     </div>
                     <div class="row text-center">
