--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
                     <p>
                         Join us for an evening of food, fun, and LOTS of beer at one of our favorite local 
                         breweries—reserved exclusively for our reception. Come thirsty!
+                        <br>
+                        Adults only, contact Genevieve or Joe for pre-arranged babysitting info.
+                            
                     </p>
                 </div>
             </div>
@@ -340,6 +343,13 @@
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
                 <p>We would greatly appreciate if you could RSVP before May 1st.</p>
+                <div class="row section-padding">
+                    <div class="col-md-4 col-md-offset-4 text-center">
+                        <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-cookie">
+                            <i class="fa fa-gift"></i>&nbsp;&nbsp;Cookie Table
+                        </a>
+                    </div>
+                </div>
                 <p>Please select 0 for your party size if you cannot make it.</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
@@ -378,6 +388,14 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-12 col-sm-6">
+                        <div class="form-input-group">
+                            <i class="fa fa-gift"></i><input type="text" name="cookie" id="cookie"
+                                                            class=""
+                                                            placeholder="Type of cookie for cookie table"
+                                                            >
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-md-12" id="alert-wrapper"></div>
                     </div>
@@ -388,6 +406,27 @@
             </div>
         </div>
     </div>
+    <div id="dc-cookie" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
+                    </button>
+                    <h3 class="text-center section-padding">What's a cookie table?</h3>
+                    <p>
+                        <br>
+                        The cookie table is an Italian-American wedding tradition in Genevieve's family.
+                        Guests are encouraged (but not required) to bring a plate of homemade cookies to share.
+                        <br>
+                        Be creative! Use an old family recipie or try making something new.
+                        <br>
+                        Duplicates are fine, but here's a list of what people are bringing so far:
+                    </p>
+                    <a href="https://docs.google.com/spreadsheets/d/1aECBnlHK8zT4OTAPfaY3B6o35uGVvKFAI698OvXmYkc/edit?usp=sharing" class="btn btn-fill btn-large btn-margin-right">Cookies</a>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 </section>
 <section id="invitation" class="section-padding">
     <div class="container">
