--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <h3>Registry</h3>
-                <!-- <a href="https://www.amazon.com/wedding/share/joeandgen" class="btn btn-fill btn-large btn-margin-right">Amazon</a> -->
-                <a  class="btn btn-fill btn-large btn-margin-right">Coming Soon</a>
+                <a href="https://www.amazon.com/wedding/share/joeandgen" class="btn btn-fill btn-large btn-margin-right">Amazon</a>
+                <!-- <a  class="btn btn-fill btn-large btn-margin-right">Coming Soon</a> -->
             </div>
         </div>
     </div>
